# csaq-quant

./: .gitignore  CHANGELOG.md  KAGGLE_INSTRUCTIONS.md  LICENSE  README.md  build_kaggle.py  eval_suite.py  example.py  kaggle_hindi_research.py  kaggle_notebook_cell.py  pyproject.toml  setup.py  test_device_map.py
benchmarks/: ablation_jaccard.py  benchmark_ppl.py  benchmark_speculative.py  csaq_kaggle_validation.ipynb  research_validation.py  validate_speculative.py
csaq/: __init__.py  __main__.py  config.py  core.py  inference.py  kernels.py  modeling.py  utils.py
examples/: example.py  konkani_sample.txt  wikitext2_export.py
tests/: test_ablation.py  test_config.py  test_core.py  test_inference.py  test_kernels.py  test_modeling.py  test_research_validation.py  test_utils.py
