[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csaq-quant"
version = "0.5.0"
description = "Causal Salience-Aware Quantization — gradient×activation informed, clique-graph LLM weight quantization with self-speculative decoding"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Omdeep Borkar", email = "omdeepborkar@gmail.com" }]
requires-python = ">=3.9,<3.13"
keywords = [
    "quantization", "llm", "compression", "inference",
    "causal salience", "mixed precision", "pytorch",
    "speculative decoding", "post-training quantization",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.38.0",
    "numpy>=1.24.0",
    "datasets>=2.14.0",
    "tqdm>=4.66.0",
    "psutil>=5.9.0",
    "safetensors>=0.4.0",
    "accelerate>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.5",
    "ruff>=0.1.0",
    "pre-commit>=3.4",
]
eval = [
    "lm-eval>=0.4.0",
]
triton = [
    "triton>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/omdeepb69/csaq-quant"
Repository = "https://github.com/omdeepb69/csaq-quant"
"Bug Tracker" = "https://github.com/omdeepb69/csaq-quant/issues"
Changelog = "https://github.com/omdeepb69/csaq-quant/blob/main/CHANGELOG.md"

[project.scripts]
csaq = "csaq.__main__:main"

[tool.setuptools.packages.find]
include = ["csaq*"]

[tool.setuptools.package-data]
csaq = ["py.typed"]

# ─── Tool configs ────────────────────────────────────────────────────────────

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests that are slow (deselect with '-m not slow')",
    "gpu: marks tests that require a CUDA GPU",
]

[tool.coverage.run]
source = ["csaq"]
omit = ["tests/*", "benchmarks/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
